html structure of the nav

--- a/index.html
+++ b/index.html
@@ -6,10 +6,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Top Navigation</title>
+    <!-- Importation des feuilles de styles -->
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
+    <!-- Debut du code de la barre de navigation -->
+    <header>
+        <nav class="navbar">
+            <a href="#" class="navbar__logo">Logo</a>
+            <ul>
+                <li><a href="">Accueil</a></li>
+                <li><a href="">A propos</a></li>
+                <li><a href="">Services</a></li>
+                <li><a href="">Tarifs</a></li>
+                <li class="cta__button"><a href="">S'inscrire</a></li>
+            </ul>
+            <button class="button__toggler">
+                <span></span>
+            </button>
+        </nav>
+    </header>
+    <!-- Fin de la barre de navigation -->
+    <!-- Debut de la section Accueil -->
+    <section class="home__section"></section>
+    <!-- Fin de Section -->
 
+    <!-- Importation du code javascript -->
+    <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
