--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+<!-- author: Mehdi-Salim Zayani -->
 
 <head>
     <meta charset="UTF-8">
@@ -22,14 +23,16 @@
                 <li><a href="">Tarifs</a></li>
                 <li class="cta__button"><a href="">S'inscrire</a></li>
             </ul>
-            <button class="button__toggler">
+            <button class="navbar__toggler">
                 <span></span>
             </button>
         </nav>
     </header>
     <!-- Fin de la barre de navigation -->
     <!-- Debut de la section Accueil -->
-    <section class="home__section"></section>
+    <section class="home__section">
+        <h1>Responsive Top <span> Navigation </span> </h1>
+    </section>
     <!-- Fin de Section -->
 
     <!-- Importation du code javascript -->
